--- a/baitap2/css/home.css
+++ b/baitap2/css/home.css
@@ -46,7 +46,7 @@ body {
 .hdTitle2 {
     font-size: 100px;
     margin-bottom : 1rem;
-    font-family: FrederickatheGreat;
+    font-family: 'Fredericka the Great', cursive;
 }
 .hdTitle3 {
     font-size: 20px;
@@ -59,7 +59,7 @@ body {
     font-size: 70px;
 }
 .hdBox {
-    font-family: FrederickatheGreat;
+    font-family: 'Fredericka the Great', cursive;
 }
 .phone {
     z-index: 2;
@@ -402,7 +402,7 @@ body {
     margin: 3rem 3rem 3rem 0;
     width: 50%;
 }
-@media (min-width: 993px) and (max-width: 1200px) {
+@media (min-width: 992px) and (max-width: 1200px) {
     /* header */
     .hdItem2 {
         width: 680px;
@@ -467,7 +467,7 @@ body {
     }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 991px) {
     .ctnItem1 {
         display: none;
     }
