--- a/infor_page/css/infor_page.css
+++ b/infor_page/css/infor_page.css
@@ -9,10 +9,13 @@
 .section_1 .title-heading > img{
     width: 40px;
 }
+.section_1 .title-heading a{
+    color: #000;
+}
 .title-heading h1{
     font-family: 'Cardo', serif;
     font-size: 70px;
-    font-weight: bold;
+    font-weight: 700;
 }
 .pen-write{
     background-color: #e9e7e7;
@@ -53,8 +56,8 @@
     aspect-ratio: 1.3758;
 }
 .section_1 .col-right .carousel-inner img{
-    width: 300px;
     height: 300px;
+    object-fit: contain;
 } 
 .section_1 .col-right .desc-banner-sec-1{
     padding-top: 30px;
@@ -217,7 +220,7 @@
 .section_3 .col-right-sec-3{
     padding-top: 50px;
 }
-@media only screen and (max-width: 1200px) and (min-width: 360px){
+@media (max-width: 1200px){
     .row.row-sec-2 .col-right-sec-2{
         display: flex;
         align-items: center;
@@ -227,7 +230,7 @@
         font-size: 40px;
     }
 }
-@media only screen and (max-width: 1190px) and (min-width: 360px){
+@media (max-width: 1190px){
     .section_3 .col-right-sec-3 > img{
     width: 90%;
     aspect-ratio: 0.76 / 1;
@@ -239,12 +242,11 @@
         font-size: 15px;
     }
     .section_3 .container-content-col-left-sec-3 .plus{
-        width: 7%;
-        height: 80%;
+        width: 50px;
+        height: 30px;
     }
-
 }
-@media only screen and (max-width: 1100px) and (min-width: 360px){
+@media (max-width: 1100px){
     .section_2 .heading-sec-2{
         padding-bottom: 20px;
     }
@@ -258,8 +260,17 @@
         font-size: 12px;
         line-height: 15px;
     }
+    .section_3 .container-content-col-left-sec-3 .plus{
+        width: 40px;
+        height: 20px;
+    }
 }
-@media only screen and (max-width: 991.9px) and (min-width: 360px){
+@media (max-width: 1024px){
+    .section_3 .heading-sec-3 h2{
+        font-size: 45px;
+    }
+}
+@media (max-width: 991.9px){
     .desc-banner-sec-1{
         display: flex;
         justify-content: center;
@@ -272,11 +283,11 @@
         padding-bottom: 20px;
     }
     .section_3 .container-content-col-left-sec-3 p{
-        font-size: 13px;
+        font-size: 10px;
     }
 }
 
-@media only screen and (max-width: 768px) and (min-width: 360px){
+@media (max-width: 767.9px){
     .section_1 .banner-sec-1 .col-right{
         position: relative;
     }
@@ -317,8 +328,25 @@
         font-size: 15px;
         text-align: justify;
     }
+    .col-left-sec-3 .heading-sec-3 h2{
+        font-size: 40px;
+    }
+    .section_3 .col-right-sec-3{
+        display: flex;
+        justify-content: center;
+    }
+    .section_3 .col-right-sec-3 > img{
+        width: 400px;
+        object-fit: contain;
+    }
 }
-@media only screen and (max-width: 575.9px) and (min-width: 360px){
+@media (max-width: 730px){
+    .container-content-col-left-sec-3 .plus{
+        width: 20px;
+        height: 20px;
+    }
+}
+@media (max-width: 575.9px){
     .heading-col-right-sec-1{
         padding-bottom: 20px;
     }
