--- a/infor_page/css/infor_page.css
+++ b/infor_page/css/infor_page.css
@@ -1,7 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-size: 100%;
+} 
+li{
+    list-style: none;
+}  
 .section_1{
     width: 100%;
     background-color: #e9e7e7;
-    padding-bottom: 50px;
 }
 .section_1 .title-heading{
     padding-top: 100px;
@@ -17,6 +27,11 @@
     font-size: 70px;
     font-weight: 700;
 }
+.title-heading h6{
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: 900;
+}
 .pen-write{
     background-color: #e9e7e7;
     width: 100%;
@@ -30,38 +45,37 @@
     height: 40px;
     transform: rotate(12deg);
 }
-.title-heading h6{
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
-    font-weight: 900;
-}
 .section_1 .banner-sec-1 .col-left{
     height: auto;
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+.section_1 .col-left .hill-and-fount{
+    width: 450px;
+    height: 690px;
+    aspect-ratio: 1.5377;
+}
 .section_1 .banner-sec-1 .col-right{
-    position: relative;
+    /* position: relative; */
     padding-left: 0 !important;
     height: auto;
+}
+.section_1 .banner-sec-1 .col-right .btn-next{
+    position: relative;
+    height: 100px;
+}
+.section_1 .col-right .desc-banner-sec-1{
+    padding-top: 30px;
 }
 .section_1 .col-right .desc-banner-sec-1 h3{
     font-family: 'Cardo', serif;
     font-weight: bold;
     text-decoration: underline;
 }
-.section_1 .col-left .hill-and-fount{
-    width: 450px;
-    height: 640px;
-    aspect-ratio: 1.3758;
-}
 .section_1 .col-right .carousel-inner img{
     height: 300px;
     object-fit: contain;
 } 
-.section_1 .col-right .desc-banner-sec-1{
-    padding-top: 30px;
-}
 .section_1 .col-right .text-desc-sec-1{
     font-family: 'Lato', sans-serif;
     font-size: 15px;
@@ -74,31 +88,56 @@
 .section_1 .desc-banner-sec-1 .heading-col-right-sec-1{
     width: 240px;
 }
-
 .heading-col-right-sec-1 h3{
     line-height: 42px;
     font-size: 30px;
 }
-.container-fluid.title-desc{
+.section_1 .col-right .container-fluid.title-desc{
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+.section_1 .col-right #carouselExampleControls, 
+.section_1 .col-right .carousel-inner, 
+.section_1 .col-right .carousel-inner .carousel-item.active{
+    height: 100%;
+}
+.section_1 .col-right .carousel-inner .carousel-item.active{
+ 
+}
 .section_1 .col-right .carousel-control-next{
     position: absolute;
-    top: 90%;
+    top: 30%;
     right: 10%;
-    width: 250px;
-    height: 80px;
+    width: 160px;
+    height: 65px;
 }
 .section_1 .col-right .carousel-control-next-icon{
     background: url(/infor_page/img_and_fonts/image/arrow.png);
     background-repeat: no-repeat;
     width: 150px;
-    height: 62px;
+    height: 65px;
 }
-/* .section_1 .col-right .btn-next-slide .fa-solid:hover{
-    opacity: 0.6;
-}*/
+.section_1 .carousel-item .text-desc-slide-1, 
+.section_1 .carousel-item .text-desc-slide-2, 
+.section_1 .carousel-item .text-desc-slide-3{
+    display: flex;
+    align-items: center;
+}
+.section_1 .carousel-item .text-desc-slide-1 p{
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    font-weight: 200;
+} 
+.section_1 .carousel-item .text-desc-slide-2 p{
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    font-weight: 200;
+}
+.section_1 .carousel-item .text-desc-slide-3 p{
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    font-weight: 200;
+}
 .section_2{
     width: 100%;
     background-color: #000;
@@ -192,33 +231,57 @@
     font-size: 18px;
     font-weight: 600;
 }
-.section_3 .menu-option-sec-3 .line-row{
-    
-}
 .section_3 .col-left-sec-3 .btn{
     background: url(/infor_page/img_and_fonts/image/plus.png);
     background-repeat: no-repeat;
-    width: 40px;
-    height: 40px;
+    width: 31px;
+    height: 32px;
 }
 .section_3 .line-row{
     display: flex;
     justify-content: center;
 }
-.container-content-col-left-sec-3{
+.section_3 .container-content-col-left-sec-3{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     padding: 15px 0;
 }
-.container-content-col-left-sec-3 p{
-    padding-right: 20px;
+.section_3 .container-content-col-left-sec-3 .title-desc-3-and-plus{
+    display: flex;
+    justify-content: center;
 }
-.container-content-col-left-sec-3 .plus{
-    padding-left: 20px;
+.container-content-col-left-sec-3 .btn-dropdown{
+    border: none;
+}
+.section_3 .title-desc-3-and-plus .btn-dropdown{
+    background: url(/infor_page/img_and_fonts/image/plus.png);
+    background-repeat: no-repeat;
+    width: 32px;
+    height: 31px;
+    margin-left: 20px;
+}
+.section_3 .container-content-col-left-sec-3 .dropdown-container{
+    display: flex;
+    text-align: justify;
+    justify-content: center;
+}
+.section_3 .container-content-col-left-sec-3 .dropdown-container p{
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    padding: 20px 100px;
 }
 .section_3 .col-right-sec-3{
     padding-top: 50px;
+}
+.section_3 .container-content-col-left-sec-3 .text-title-sec-3{
+    display: flex;
+    align-items: center;
+}
+.section_3 .container-content-col-left-sec-3 .text-title-sec-3 p{
+    
 }
 @media (max-width: 1200px){
     .row.row-sec-2 .col-right-sec-2{
@@ -272,34 +335,107 @@
 }
 @media (max-width: 991.9px){
     .desc-banner-sec-1{
-        display: flex;
+        height: 400px;
         justify-content: center;
+    }
+    .heading-col-right-sec-1{
+        display: flex;
+        align-items: center;
     }
     .carousel-item.active{
         display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         justify-content: center;
+    }
+    .image-slider{
+        display: block;
+        margin: auto;
     }
     .section_1 .col-left{
         padding-bottom: 20px;
     }
-    .section_3 .container-content-col-left-sec-3 p{
-        font-size: 10px;
+    .section_1 .col-right #carouselExampleControls{
+        padding-top: 30px;
     }
-}
-
-@media (max-width: 767.9px){
-    .section_1 .banner-sec-1 .col-right{
-        position: relative;
+    .section_3 .container-content-col-left-sec-3 p{
+        font-size: 14px;
     }
     .section_1 .col-right .carousel-control-next{
         position: absolute;
-        top: 100%;
+        top: 10%;
+        right: 10%;
+        width: 160px;
+        height: 65px;
+    }
+    .section_3 .title-desc-3-and-plus .btn-dropdown {
+        background: url(/infor_page/img_and_fonts/image/plus.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 24px;
+        height: 22px;
+        /* object-fit: cover; */
+        margin-left: 20px;
+    }
+}
+@media (max-width: 870px){
+    .section_3 .heading-sec-3 h2 {
+        font-size: 36px;
+    }
+    .section_3 .container-content-col-left-sec-3 p {
+        font-size: 12px;
+    }
+}
+@media (max-width: 800px){
+    .section_1{
+        padding-bottom: 60px;
+    }
+    .section_1 .container-fluid.title-desc .desc-banner-sec-1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .heading-col-right-sec-1 h3{
+        text-align: center;
+    }
+    .image-slider{
+        padding-bottom: 30px;
+    }
+    .section_1 .col-right .carousel-control-next-icon{
+        background: none;
+    }
+    .section_1 .col-right .row.desc-banner-sec-1{
+        padding-top: 0;
+    }
+    .section_1 .container-fluid.title-desc .desc-banner-sec-1 .col-sm-6.text-desc-sec-1 p{
+        padding-top: 20px;
+    }
+    .btn-next{
+        display: none;
+    }
+}
+@media (max-width: 767.9px){
+    .section_1 .container-fluid .row.banner-sec-1 .col-right{
+        /* position: relative; */
+    }
+    .section_1 .col-right .carousel-control-next{
+        position: absolute;
+        top: 50%;
     }
     .section_1 .col-left{
         padding-bottom: 20px;
     }
     .section_1{
-        padding-bottom: 200px;
+        padding-bottom: 50px;
+    }
+    .section_1 .col-right .desc-banner-sec-1{
+        height: 550px;
+    }
+    .section_1 .col-right .row.desc-banner-sec-1{
+        padding-top: 0;
+    }
+    .section_1 .col-right .carousel-control-next{
+        display: none;
     }
     .section_2 .col-left-sec-2{
         padding-left: 30px;
@@ -346,17 +482,40 @@
         height: 20px;
     }
 }
+@media (max-width: 700px){
+    .section_1 .col-right .carousel-inner .image-slider{
+        width: 100%;
+    }
+    .section_1 .col-right .carousel-item.active{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .image-slider{
+        display: flex;
+        justify-content: center;
+    }
+    .container-content-col-left-sec-3 .plus{
+        width: 20px;
+        height: 20px;
+    }
+}
 @media (max-width: 575.9px){
     .heading-col-right-sec-1{
+        display: flex;
+        justify-content: center;
         padding-bottom: 20px;
     }
-    .heading-col-right-sec-1 h3{
-        text-align: center;
-        font-size: 25px;
-        line-height: 30px;
+    .heading-col-right-sec-1 h3 {
+        font-size: 28px;
+        line-height: 33px;
     }
-    .section_1 .col-right .text-desc-sec-1 p{
-        font-size: 12px;
+    .section_1 .col-right .text-desc-sec-1 p {
+        font-size: 15px;
+    }
+    .section_1 .col-right .desc-banner-sec-1 {
+        height: auto;
     }
     .row.desc-banner-sec-1{
         --bs-gutter-x: 0 !important;
@@ -371,9 +530,33 @@
     .heading-col-right-sec-1{
         padding-bottom: 5px;
     }
-    .heading-col-right-sec-1 h3 {
-        font-size: 20px;
-        line-height: 25px;
+}
+@media (max-width: 509px){
+    .section_3 .title-desc-3-and-plus .btn-dropdown {
+        margin-left: 10px;
+    }
+    .section_3 .container-content-col-left-sec-3 p {
+        font-size: 11px;
+    }
+    .col-left-sec-3 .heading-sec-3 h2 {
+        font-size: 35px;
+    }
+}
+@media (max-width: 430px){
+    .col-left-sec-3 .heading-sec-3 h2 {
+        font-size: 30px;
+    }
+    .col-left-sec-3 .heading-sec-3 h2 {
+        text-align: center;
+        font-size: 35px;
+    }
+    .section_3 .container-content-col-left-sec-3 p {
+        font-size: 10px;
+    }
+}
+@media (max-width: 380px){
+    .section_3 .container-content-col-left-sec-3 p {
+        font-size: 9px;
     }
 }
 
