--- a/floral/css/floral.css
+++ b/floral/css/floral.css
@@ -23,21 +23,23 @@ body{
 .nav-bar{
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100%;
 }
 .nav-bar .nav-bar-list {
     display: inline-block;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 .nav-bar .nav-bar-list li{
     display: inline-block;
     position: relative;
 }
 .nav-bar-list .sign_in{
-    height: 50px;
     border: 2px solid white;
+    border-radius: 15px;
 }
 .nav-bar .nav-bar-list a{
-    line-height: 100px;
     text-decoration: none;
     color: #fff;
     padding: 0 15px;
@@ -112,6 +114,9 @@ body{
     color: rgb(72, 74, 75);
     padding-bottom: 20px;
 }
+.decor-leaf-flower-bottom-left{
+    min-height: 270px;
+}
 .decor-leaf-flower-bottom-left > img{
     position: absolute;
     bottom: 0;
@@ -124,18 +129,29 @@ body{
 .flower-arrange-banner .col-right > img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .sales{
     background-color: #765a33;
-    min-height: 265px;
+    min-height: 270px;
+}
+.sales .number-run{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .sales .number-run h3{
     font-family: 'Playfair Display', serif;
     font-size: 40px;
     color: rgb(255, 255, 255);
+    margin-bottom: 0;
 }
-.sales .package-sold{
-    color: #fff;
+.sales .number-run h4{
+    color: rgb(255, 255, 255);
+    margin-bottom: 0;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 500;
 }
 .our-top-product-content{
     background-color: #e5e2d8;
