--- a/floral/css/floral.css
+++ b/floral/css/floral.css
@@ -64,7 +64,76 @@ body{
     color: #fff;
 }
 .icon-shopping{
-    padding: 0 30px;
+    padding: 0 20px;
+}
+.sidebar-btn{
+    display: none;
+    /* justify-content: center; */
+    align-items: center;
+    padding-right: 20px;
+}
+.sidebar-btn i{
+    color: #fff;
+    font-size: 20px;
+}
+.nav_overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: flex-start;
+    display: none;
+}
+.nav_overlay.open{
+    display: flex;
+}
+.nav_sidebar{
+    background-color: #c87e6b;
+    width: 200px;
+    height: 100vh;
+    position: relative;
+}
+.nav_sidebar .nav_list > li{
+    display: block;
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    background-color: #484a4b;
+}
+.nav_sidebar .nav_list li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.nav_list{
+    padding-top: 50px;
+}
+.sidebar-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #000;
+    color:#fff;
+    font-weight: 800;
+    padding: 12px 15px;
+    opacity: 0.8;
+}
+.sidebar-close:hover{
+    background-color: red;
+    color:#fff;
+    opacity: 1;
+}
+.sidebar-close svg{
+    line-height: 2;
+    color: #fff;
+}
+.sidebar-close, .sidebar-close .nav_list li{
+    cursor: pointer;
 }
 .flower-arrange-banner{
     height: auto;
@@ -77,6 +146,38 @@ body{
     background-color: #e3e0d6;
     padding-left: 0;
     padding-right: 0;
+}
+.flower-arr-choose{
+    display: flex;
+    justify-content: center;
+}
+.shop-flower-arr-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 40px;
+    background-color: #787878;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+.shop-flower-arr-btn a{
+    color: #fff;
+    text-decoration: none;
+}
+.read-more-flower-arr-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 40px;
+    background-color:  #e3e0d6;
+    border-radius: 20px;
+    margin-left: 10px;
+}
+.read-more-flower-arr-btn a{
+    color: #484a4b;
+    text-decoration: none;
 }
 .col-left .decor-leaf-flower{
     display: flex;
@@ -102,9 +203,7 @@ body{
     font-family: 'Josefin Slab', serif;
     color: rgb(118, 90, 51);
     margin-bottom: 0;
-    padding-top: 15px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding: 15px 150px 50px;
 }
 .flower-arrange-banner .col-left h2{
     margin-bottom: 0;
@@ -123,6 +222,7 @@ body{
     left: 0;
 }
 .flower-arrange-banner .col-right{
+    background-color: #e4e1d7;
     padding-left: 0;
     padding-right: 0;
 }
@@ -152,13 +252,166 @@ body{
     margin-bottom: 0;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 500;
+    text-align: center;
 }
 .our-top-product-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 134px;
     background-color: #e5e2d8;
-    min-height: 1045px;
+    min-height: 950px;
+}
+.header-our-top-product{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.heading-our-top-product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 90px;
+}
+.our-top-product-content h2{
+    font-family: 'Playfair Display', serif;
+    font-size: 50px;
+    margin-bottom: 0;
+    color: rgb(72, 74, 75);
+    padding-bottom: 10px;
+    text-align: center;
+}
+.our-top-product-content h3{
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 600;
+    color: rgb(118, 90, 51);
+    margin-bottom: 0;
+    text-align: center;
+}
+.respon-slider{
+    --bs-gutter-x: 0;
+    width: 100%;
+    min-height: 700px;
+}
+.swiper.mySwiper{
+    padding-top: 134px;
+}
+.flower-image-slider{
+    display: flex;
+    justify-content: center;
+}
+.flower-image-slider > img{
+    width: 90%;
+    object-fit: contain;
+}
+.intro-text-product{
+    width: 90%;
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+}
+.intro-text-product h3{
+    font-family: "PlayfairDisplay";
+    color: rgb(72, 74, 75);
+    font-size: 30px;
+}
+.intro-text-product p{
+    padding: 0 35px;
+    font-size: 15px;
+    line-height: 20px;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 500;
+    color: rgb(118, 90, 51);
+}
+.more-btn{
+    padding-left: 30px;
+    width: 90%;
+    display: flex;
+    justify-content: flex-start;
+}
+.read-more-btn{
+    width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: rgb(69, 69, 69);
+    color: #fff;
+}
+.leaf-decor-product-bottom{
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.slick-prev.slick-arrow{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(69, 69, 69);
+    border: none;
+    position: absolute;
+    top: 85%;
+    left: 40%;
+}
+.slick-prev.slick-arrow:hover{
+    background-color: rgb(69, 69, 69);
+}
+.slick-next.slick-arrow{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(69, 69, 69);
+    border: none;
+    position: absolute;
+    top: 85%;
+    right: 40%;
+}
+.slick-next.slick-arrow:hover{
+    background-color: rgb(69, 69, 69);
+}
+.nav_list{
+    padding-left: 0;
+}
+.leaf-decor-product-bottom{
+    position: relative;
+}
+.leaf-bottom-left-product > img{
+    position: absolute;
+    bottom: 80px;
+    left: 10px;
+}
+.leaf-bottom-right-product > img{
+    position: absolute;
+    bottom: 80px;
+    right: 10px;
 }
 .how-we-do-it-content{
-
+    background-color: #e3e0d6;
+    min-height: 950px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.how-we-do-it-content h2{
+    font-size: 50px;
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    color: rgb(72, 74, 75);
+}
+.how-we-do-it-content h4{
+    font-size: 20px;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 500;
+    color: rgb(118, 90, 51);
+}
+.video-how-we-do-it{
+    padding-top: 110px;
+}
+.video-how-we-do-it > video{
+    width: 900px;
+    height: 500px;
 }
 .special-sale-off{
 
@@ -177,4 +430,44 @@ body{
 }
 .footer{
 
+}
+@media only screen and (max-width: 992px) and (min-width: 360px){
+    .header .user-icon .sidebar-btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+}
+@media (max-width: 992px){
+    .header{
+        justify-content: space-between;
+    }
+    .user-icon{
+        display: flex;
+        justify-content: center;
+        padding: 0 0;
+    }
+    .user-icon .icon-shopping{
+        padding: 0 18px;
+    }
+    .nav-bar{
+        display: none;
+    }
+}
+@media (max-width: 768px){
+    .slick-prev.slick-arrow{
+        position: absolute;
+        left: 35%;
+    }
+    .slick-next.slick-arrow{
+        position: absolute;
+        right: 35%;
+    }
+}
+@media (max-width: 576px){
+    .text-contain p{
+        padding-left: 90px;
+        padding-right: 90px;
+    }
 }
