--- a/floral/css/floral.css
+++ b/floral/css/floral.css
@@ -68,7 +68,6 @@ body{
 }
 .sidebar-btn{
     display: none;
-    /* justify-content: center; */
     align-items: center;
     padding-right: 20px;
 }
@@ -146,6 +145,7 @@ body{
     background-color: #e3e0d6;
     padding-left: 0;
     padding-right: 0;
+    padding-bottom: 50px;
 }
 .flower-arr-choose{
     display: flex;
@@ -164,12 +164,15 @@ body{
 .shop-flower-arr-btn a{
     color: #fff;
     text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 600;
 }
 .read-more-flower-arr-btn{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
+    width: 115px;
     height: 40px;
     background-color:  #e3e0d6;
     border-radius: 20px;
@@ -178,6 +181,9 @@ body{
 .read-more-flower-arr-btn a{
     color: #484a4b;
     text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 600;
 }
 .col-left .decor-leaf-flower{
     display: flex;
@@ -218,6 +224,7 @@ body{
 }
 .decor-leaf-flower-bottom-left > img{
     position: absolute;
+    object-fit: contain;
     bottom: 0;
     left: 0;
 }
@@ -232,6 +239,7 @@ body{
     object-fit: cover;
 }
 .sales{
+    padding: 50px 0;
     background-color: #765a33;
     min-height: 270px;
 }
@@ -258,7 +266,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 134px;
+    padding-top: 104px;
     background-color: #e5e2d8;
     min-height: 950px;
 }
@@ -294,6 +302,11 @@ body{
     width: 100%;
     min-height: 700px;
 }
+.flower-slider{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 .swiper.mySwiper{
     padding-top: 134px;
 }
@@ -306,7 +319,6 @@ body{
     object-fit: contain;
 }
 .intro-text-product{
-    width: 90%;
     padding-top: 30px;
     display: flex;
     flex-direction: column;
@@ -345,26 +357,34 @@ body{
     display: flex;
     justify-content: space-around;
 }
+.slick-slider .slick-arrow:focus, .slick-slider .slick-arrow:hover{
+    background-color: rgb(69, 69, 69);
+    color: #fff;
+}
 .slick-prev.slick-arrow{
+    top: 85%;
+    left: 40%;
+}
+.slick-next.slick-arrow, .slick-prev.slick-arrow{
+    font-size: 20px;
+    color: white;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: rgb(69, 69, 69);
     border: none;
     position: absolute;
-    top: 85%;
-    left: 40%;
 }
 .slick-prev.slick-arrow:hover{
     background-color: rgb(69, 69, 69);
 }
+.slick-prev.slick-arrow::before{
+    content: unset;
+}
+.slick-next.slick-arrow::before{
+    content: unset;
+}
 .slick-next.slick-arrow{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgb(69, 69, 69);
-    border: none;
-    position: absolute;
     top: 85%;
     right: 40%;
 }
@@ -388,39 +408,263 @@ body{
     right: 10px;
 }
 .how-we-do-it-content{
+    position: relative;
     background-color: #e3e0d6;
-    min-height: 950px;
+    height: auto;
+    padding-bottom: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.leaf-left-how-we-do-it{
+    position: absolute;
+    width: 8%;
+    height: 25%;
+    left: 0;
+}
+.leaf-left-how-we-do-it > img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.left-right-how-we-do-it{
+    position: absolute;
+    width: 8%;
+    height: 25%;
+    right: 0;
+    bottom: 0;
+}
+.left-right-how-we-do-it > img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 .how-we-do-it-content h2{
     font-size: 50px;
     font-family: 'Playfair Display', serif;
     font-weight: 700;
     color: rgb(72, 74, 75);
+    text-align: center;
 }
 .how-we-do-it-content h4{
     font-size: 20px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 500;
     color: rgb(118, 90, 51);
+    text-align: center;
+    padding: 0 15px;
+}
+.box-brown-decor-top-how-we-do-it{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    border: 5px solid rgb(138, 106, 62);
+    right:  7%;
+    top: 10%;
+    z-index: -1;
+}
+.box-decor-bottom-how-we-do-it{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    background-color: #c87e6b;
+    bottom: -5%;
+    left: 7%;
+    z-index: -1;
 }
 .video-how-we-do-it{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
     padding-top: 110px;
 }
 .video-how-we-do-it > video{
-    width: 900px;
-    height: 500px;
+    width: 80%    !important;
+    height: auto   !important;
 }
 .special-sale-off{
-
+    height: auto;
+    --bs-gutter-x: 0;
+}
+.special-sale-off .offer-col-left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 350px;
+    padding-right: 0;
+    padding-left: 0;
+    background-color: #ddc57c;
+}
+.offer-col-left .spec-offer-btn{
+    width: 200px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #424242;
+    border-radius: 25px;
+}
+.offer-col-left .spec-offer-btn a{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Playfair Display', serif;
+    font-size: 20px;
+    font-weight: 700;
+}
+.offer-col-left h2{
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 900;
+    font-size: 110px;
+    color: #424242;
+}
+.offer-col-left h3{
+    text-align: center;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    color: #424242;
+}
+.special-sale-off .image-offer-col-right{
+    padding-right: 0;
+    padding-left: 0;
+}
+.special-sale-off .image-offer-col-right > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .intro-product-best-flower{
-
+    position: relative;
+    padding-top: 50px;
+    background-color: #e7e4db;
+    --bs-gutter-x: 0;
+    padding-bottom: 50px;
+}
+.image-best-flower-col-left{
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    z-index: 1;
+}
+.image-best-flower-col-left > img{
+    width: 100%;
+    height: 80%;
+    object-fit: contain;
+}
+.box-pink-top-best-flower{
+    background-color: #c87e6b;
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    z-index: -1;
+}
+.box-brown-bottom-best-flower{
+    position: absolute;
+    width: 40%;
+    height: 40%;
+    bottom: 5%;
+    left: 5%;
+    border: 5px solid #765a33;
+    z-index: -1;
+}
+.heading-best-flower-col-right{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.text-best-flower{
+    width: 80%;
+}
+.text-best-flower .more-btn{
+    padding-left: 0;
+}
+.text-best-flower h2{
+    font-family: 'Playfair Display', serif;
+    font-size: 50px;
+}
+.heading-best-flower-col-right p{
+    font-family: 'Josefin Slab', serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+    color: rgb(118, 90, 51);
+}
+.leaf-decor-best-flower-bottom{
+    position: absolute;
+    width: 10%;
+    height: 30%;
+    bottom: 0;
+    right: 0;
+}
+.leaf-decor-best-flower-bottom > img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 .intro-take-care-details{
-
+    --bs-gutter-x: 0;
+    background-color: #e7e4da;
+}
+.heading-take-care-detail{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.text-take-care-detail{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container-text-takecare-detail{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    /* padding: 0 70px; */
+}
+.text-take-care-detail h2{
+    font-family: 'Playfair Display', serif;
+    font-size: 50px;
+    text-align: start;
+}
+.text-take-care-detail .more-btn{
+    width: 70%;
+    padding-left: 0;
+}
+.image-take-care-detail{
+    position: relative;
+    display: flex;
+    min-height: 600px;
+    z-index: 1;
+} 
+.image-take-care-detail .box-pink-take-care-detail{
+    background-color: #c87e6b;
+    width: 20%;
+    height: 15%;
+    position: absolute;
+    top: 5%;
+    left: -5%;
+    z-index: -1;
+}
+.image-take-care-detail .box-brown-take-care-detail{
+    position: absolute;
+    width: 40%;
+    height: 40%;
+    bottom: 5%;
+    right: 5%;
+    border: 5px solid #765a33;
+    z-index: -1;
+}
+.image-take-care-detail > img{
+    width: 85%;
+    height: 100%;
+    object-fit: contain;
 }
 .intro-love-what-we-do{
 
@@ -431,7 +675,52 @@ body{
 .footer{
 
 }
-@media only screen and (max-width: 992px) and (min-width: 360px){
+/* @media (max-width: 1440px) and (min-width: 768px){
+    .how-we-do-it-content{
+        min-height: 950px;
+    }
+} */
+/* @media (max-width: ) */
+@media (max-width: 1200px){
+    .image-take-care-detail .box-pink-take-care-detail{
+        position: absolute;
+        width: 20%;
+        height: 15%;
+        top: 10%;
+        left: -5%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail{
+        position: absolute;
+        width: 40%;
+        height: 40%;
+        bottom: 10%;
+        right: 10%;
+    }
+}
+@media (max-width: 1100px){
+    .box-brown-decor-top-how-we-do-it {
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        right: 5%;
+        top: 15%;
+    }
+    .image-take-care-detail .box-pink-take-care-detail{
+        position: absolute;
+        width: 20%;
+        height: 15%;
+        top: 12%;
+        left: -5%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail{
+        position: absolute;
+        width: 40%;
+        height: 40%;
+        bottom: 15%;
+        right: 7%;
+    }
+}
+@media (max-width: 992px) and (min-width: 360px){
     .header .user-icon .sidebar-btn{
         display: flex;
         justify-content: center;
@@ -454,6 +743,59 @@ body{
     .nav-bar{
         display: none;
     }
+    .box-brown-decor-top-how-we-do-it {
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        right: 5%;
+        top: 15%;
+    }
+    .image-take-care-detail .box-pink-take-care-detail{
+        position: absolute;
+        width: 20%;
+        height: 15%;
+        top: 15%;
+        left: -5%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail{
+        position: absolute;
+        width: 40%;
+        height: 40%;
+        bottom: 15%;
+        right: 7%;
+    }
+}
+@media(max-width: 900px){
+    .box-brown-decor-top-how-we-do-it {
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        right: 5%;
+        top: 15%;
+    }
+    .image-take-care-detail .box-pink-take-care-detail{
+        position: absolute;
+        width: 20%;
+        height: 10%;
+        top: 20%;
+        left: -5%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail{
+        position: absolute;
+        width: 40%;
+        height: 30%;
+        bottom: 20%;
+        right: 7%;
+    }
+}
+@media(max-width: 820px){
+    .box-brown-decor-top-how-we-do-it{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    right: 5%;
+    top: 15%;
+    }
 }
 @media (max-width: 768px){
     .slick-prev.slick-arrow{
@@ -464,10 +806,106 @@ body{
         position: absolute;
         right: 35%;
     }
+    .text-best-flower{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .text-best-flower h2{
+        font-size: 45px;
+        align-items: center;
+    }
+    .heading-best-flower-col-right p{
+        text-align: center;
+        font-size: 20px;
+        padding: 15px 50px;
+    }
+    .image-take-care-detail{
+        display: flex;
+        justify-content: center;
+    }
+    .container-text-takecare-detail h2{
+        text-align: center;
+    }
+    .image-take-care-detail > img{
+        width: 70%;
+    }
+    .image-take-care-detail .box-pink-take-care-detail{
+        width: 20%;
+        height: 15%;
+        position: absolute;
+        top: 7%;
+        left: 9%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail{
+        width: 40%;
+        height: 40%;
+        bottom: 5%;
+        right: 8%;
+    }
+}
+@media (max-width: 700px){
+    .box-brown-decor-top-how-we-do-it {
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        right: 7%;
+        top: 20%;
+    }
+    .image-take-care-detail .box-pink-take-care-detail{
+        width: 20%;
+        height: 15%;
+        position: absolute;
+        top: 12%;
+        left: 8%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail{
+        width: 40%;
+        height: 30%;
+        bottom: 10%;
+        right: 8%;
+    }
 }
 @media (max-width: 576px){
+    .box-brown-decor-top-how-we-do-it {
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        right: 4%;
+        top: 25%;
+    }
+    .image-take-care-detail .box-pink-take-care-detail {
+        width: 20%;
+        height: 15%;
+        position: absolute;
+        top: 22%;
+        left: 8%;
+    }
+    .image-take-care-detail .box-brown-take-care-detail {
+        width: 40%;
+        height: 30%;
+        bottom: 22%;
+        right: 8%;
+    }
+    .text-best-flower h2{
+        font-size: 40px;
+        text-align: center;
+    }
     .text-contain p{
         padding-left: 90px;
         padding-right: 90px;
+    }
+}
+@media (max-width: 480px){
+    .flower-arrange-banner .col-left h2{
+        font-size: 50px;
+    }
+    .text-contain li{
+        font-size: 22px;
+    }
+    .text-contain p{
+        font-size: 18px;
+        line-height: 25px;
     }
 }
